# mLog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: mLog.cpp  mLog.h
test/: CMakeLists.txt  mLog_test.cpp
